--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!--threejs es una libreria de codigo javascript para renderizar 3d en un html-->
-<!--aunque threejs funcione en frontend hay que abrir el html con un servidor real, auqnue tambien se puede instalar en nodejs-->
+<!--Threejs es una libreria de codigo javascript para renderizar 3d en un html-->
+<!--Aunque threejs funcione en frontend hay que abrir el html con un servidor real, auqnue tambien se puede instalar en nodejs-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>body{margin:0;}</style>
-    <script src="src/js/three.js" type="module"></script><!--script con todas las librerias de threejs (descargado de internet)-->
-    <script src="src/index.js" type="module"></script><!--script con el control sobre los elementos 3d-->
+    <script src="src/js/three.js" type="module"></script><!--Script con todas las librerias de threejs (descargado de internet)-->
+    <script src="src/index.js" type="module"></script><!--Script con el control sobre los elementos 3d-->
 </head>
 <body>
     <p>html fuera del canvas <br> el canvas:</p>
-    <div id="contenedor"><!--la imagen renderizada aparecera aqui-->
+    <div id="contenedor"><!--La imagen renderizada aparecera aqui-->
 
     </div>
 </body>
